integration_test/manifests/backend/patch_adapter_event_sidecar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ignored-by-kustomize
spec:
  template:
    spec:
      containers:
        - name: ml-api-adapter-service-sidecar
          image: "mojaloop/event-sidecar:v11.0.1"
          imagePullPolicy: IfNotPresent
          command:
            - npm
            - run
            - start
          ports:
            - containerPort: 4001
          readinessProbe:
            httpGet:
              path: /health
              port: 4001
            initialDelaySeconds: 120
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /health
              port: 4001
            initialDelaySeconds: 90
            periodSeconds: 15
          volumeMounts:
            - name: ml-api-adapter-service-sidecar-volume
              mountPath: /opt/event-sidecar/config
      volumes:
        - name: ml-api-adapter-service-sidecar-volume
          configMap:
            name: ml-api-adapter-service-sidecar
            items:
            - key: default.json
              path: default.json
