integration_test/manifests/backend/patch_ledger_event_sidecar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ignored-by-kustomize
spec:
  template:
    spec:
      containers:
        - name: centralledger-service
        - name: centralledger-service-sidecar
          image: 'mojaloop/event-sidecar:v11.0.1'
          imagePullPolicy: IfNotPresent
          command:
            - npm
            - run
            - start
          ports:
            - containerPort: 4001
          readinessProbe:
            httpGet:
              path: /health
              port: 4001
            initialDelaySeconds: 120
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /health
              port: 4001
            initialDelaySeconds: 90
            periodSeconds: 15
          volumeMounts:
            - name: sidecar-volume
              mountPath: /opt/event-sidecar/config
      volumes:
        - name: sidecar-volume
          configMap:
            name: centralledger-service-sidecar
            items:
              - key: default.json
                path: default.json
