integration_test/manifests/backend/ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: reporting-hub-bop-trx-ui
spec:
  rules:
  - http:
      paths:
      - path: /()(.*)
        backend:
          serviceName: reporting-hub-bop-trx-ui
          servicePort: http
      - path: /api/ledger(/|$)(.*)
        backend:
          serviceName: centralledger-service
          servicePort: 80
